Cleaned up js files

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
                 <div class="input-group">
                     <label for="starting">Starting Destination</label>
                     <p>Enter City, State or Zip</p>
-                    <input type="text" class="form-control" id="autocomplete"name="start-address"
-                    aria-describedby="starting destination" placeholder="Enter Starting Location" required>
+                    <input type="text" class="form-control" id="autocomplete" name="start-address"
+                    aria-describedby="starting destination" onFocus="geolocate()" placeholder="Enter Starting Location" required>
                 </div>
             </div>
             <div>
@@ -58,7 +58,7 @@
                     <label for="ending">Ending Destination</label>
                     <p>Enter City, State or Zip</p>
                     <input type="text" class="form-control" id="autocomplete2" name="end-address"
-                    aria-describedby="ending destination" placeholder="Enter Ending Location" required>
+                    aria-describedby="ending destination" onFocus="geolocate()" placeholder="Enter Ending Location" required>
                 </div>
             </div>
                 <div>
@@ -72,101 +72,6 @@
                     <input type="text" id="lng2" name="lng2"></input>
                 </div>
         </div>
-        <script>
-            var placeSearch, autocomplete, autocomplete2;
-
-      var componentForm = {
-        // street_number: 'long_name',
-        // route: 'long_name',
-        locality: 'long_name',
-        administrative_area_level_1: 'short_name',
-        postal_code: 'short_name'
-      };
-
-       // var options = {
-       //    types: ['(cities)'],
-       //    componentRestrictions: {country: "us"}
-       //   };
-
-      function initAutocomplete() {
-        // Create the autocomplete object, restricting the search to geographical
-        // location types.
-        autocomplete = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */
-            (document.getElementById('autocomplete')));
-
-        autocomplete.addListener('place_changed', function() {
-            fillInAddress(autocomplete, "");
-        });
-
-        autocomplete2 = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */
-            (document.getElementById('autocomplete2'))); // what does ** @type mean
-
-        // When the user selects an address from the dropdown, populate the address
-        // fields in the form.
-        
-        autocomplete2.addListener('place_changed', function() {
-            fillInAddress(autocomplete2, "2");
-        });               // look up the place_changed listener
-      
-      }
-
-      function fillInAddress(autocomplete, unique) {
-        // Get the place details from the autocomplete object.
-
-        var place = autocomplete.getPlace();
-
-        for (var component in componentForm) {
-          if(!!document.getElementById(component + unique)) {
-            document.getElementById(component + unique).value = '';
-          // document.getElementById(component).disabled = false;
-        }
-    }
-
-        // Get each component of the address from the place details
-        // and fill the corresponding field on the form.
-        for (var i = 0; i < place.address_components.length; i++) {
-          var addressType = place.address_components[i].types[0];
-          if (componentForm[addressType] && document.getElementById(addressType + unique)) {
-            var val = place.address_components[i][componentForm[addressType]];
-            document.getElementById(addressType + unique).value = val;
-        }
-        var searchstring = document.getElementById('autocomplete' + unique).value
-        document.getElementById('searchstring' + unique).value = searchstring
-        }
-
-        if (place.geometry.location) {
-            var lat = place.geometry.location.lat()
-            document.getElementById('lat' + unique).value = lat;
-            var lng = place.geometry.location.lng()
-            document.getElementById('lng' + unique).value = lng;
-        }
-      }
-
-      google.maps.event.addDomListener(window, "load", initAutocomplete);
-
-      function geolocate() {
-                if (navigator.geolocation) {
-                  navigator.geolocation.getCurrentPosition(function(position) {
-                    var geolocation = {
-                      lat: position.coords.latitude,
-                      lng: position.coords.longitude
-                    };
-                    var circle = new google.maps.Circle({
-                      center: geolocation,
-                      radius: position.coords.accuracy
-                    });
-                    autocomplete.setBounds(circle.getBounds());
-                  });
-                }
-              }
-
-      // Bias the autocomplete object to the user's geographical location,
-      // as supplied by the browser's 'navigator.geolocation' object.
-      
-
-        </script>
 
         <br>
         <!-- submit button -->
@@ -174,6 +79,8 @@
 
     </div>
 </form>
+
+<script type="text/javascript" src="static/autocomplete.js"></script>
 
 
 {% endblock %}
