Date toggle now synced to return new query results via AJAX

--- a/templates/search.html
+++ b/templates/search.html
@@ -149,7 +149,7 @@
     </div>
       <div class="col-xs-4">
       <label for="from">From</label>
-      <input type="text" id="from" name="from">
+      <input type="text" id="from" name="from" required>
       <label for="to">to</label>
       <input type="text" id="to" name="to">
     </div>
