adjusted date search so leaving to or from blank works

--- a/templates/search.html
+++ b/templates/search.html
@@ -340,7 +340,7 @@
 <script type="text/javascript" src="static/search_cost_toggle.js"></script>
 <script type="text/javascript" src="static/search_date.js"></script>
 <script type="text/javascript" src="static/search.js"></script>
-<script type="text/javascript" src="static/reverse_input.js"></script>
+<!-- <script type="text/javascript" src="static/reverse_input.js"></script> -->
 <script type="text/javascript" src="static/user_location.js"></script>
 
 
