--- a/templates/search.html
+++ b/templates/search.html
@@ -34,7 +34,7 @@
     - Add distance/maps
   </div>
 
-  <form action="/search">
+  <form action="/search" id="searchform">
     <div class="row form-inline">
       <fieldset>
 
@@ -152,6 +152,47 @@
   </div>
   
   <br>
+
+  <div class="row col-xs-12">
+    <div class="col-xs-6">
+
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          <li>
+            <a href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+          </li>
+        </ul>
+      </nav>
+
+    </div>
+
+    <div class="col-xs-6">
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" 
+        id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" 
+        aria-expanded="true">10
+        <span class="caret"></span>
+        </button> Results per page
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">10</a></li>
+          <li><a href="#">50</a></li>
+          <li><a href="#">100</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
   <table class="table table-hover" id="results">
     {% if rides %}
@@ -335,6 +376,15 @@
 
 
 <script> $("a.my-tool-tip").tooltip(); </script>
+<script>
+
+  function preventSubmit(evt) {
+    evt.preventDefault()
+  }
+
+  $('#searchform').on("submit", preventSubmit)
+
+  </script>
 
 <script type="text/javascript" src="static/autocomplete.js"></script>
 <script type="text/javascript" src="static/search_time_toggle.js"></script>
